--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- Swagger3 -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+        </dependency>
+        <!-- Swagger3 End -->
     </dependencies>
 
     <dependencyManagement>
@@ -115,6 +122,14 @@
                 <version>1.2.83</version>
             </dependency>
             <!-- Misc End -->
+
+            <!-- Swagger3 -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-boot-starter</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+            <!-- Swagger3 End -->
         </dependencies>
     </dependencyManagement>
 
