--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,13 @@
                 <artifactId>springfox-boot-starter</artifactId>
                 <version>3.0.0</version>
             </dependency>
-            <!-- Swagger3 End -->
+            <!-- Swagger End -->
+
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-commons</artifactId>
+                <version>2.5.6</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
