--- a/start/src/main/resources/application.properties
+++ b/start/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 project.name=start
 
+# MySql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/user_ly
 spring.datasource.username=root
 spring.datasource.password=123456
+
+# redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.database=0
+spring.redis.lettuce.pool.min-idle=8
+spring.redis.lettuce.pool.max-idle=16
+spring.redis.lettuce.pool.max-active=32
