--- a/start/src/main/resources/application.properties
+++ b/start/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.redis.database=0
 spring.redis.lettuce.pool.min-idle=8
 spring.redis.lettuce.pool.max-idle=16
 spring.redis.lettuce.pool.max-active=32
+
+# Mybatis
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
