--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,14 @@
                 <artifactId>spring-data-commons</artifactId>
                 <version>2.5.6</version>
             </dependency>
+
+            <!--   jwt     -->
+            <dependency>
+                <groupId>com.auth0</groupId>
+                <artifactId>java-jwt</artifactId>
+                <version>4.3.0</version>
+            </dependency>
+            <!--   jwt End    -->
         </dependencies>
     </dependencyManagement>
 
