--- a/user-auth-example-infrastructure/pom.xml
+++ b/user-auth-example-infrastructure/pom.xml
@@ -62,5 +62,16 @@
             <artifactId>commons-pool2</artifactId>
         </dependency>
         <!--    redis End   -->
+
+        <!--   jwt     -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+        <!--   jwt End    -->
     </dependencies>
 </project>
